2004-11-27  Dwayne Bailey  <dwayne@translate.org.za>

	* configure.in: Added "nso" to ALL_LINGUAS.

Tue Oct 26 16:31:05 2004  George Lebl <jirka@5z.com>

	* Release 2.6.0.6

Tue Oct 26 15:51:58 2004  George Lebl <jirka@5z.com>

	* config/gdm.conf.in: update comments to reflect that the vt stuff
	  works on freebsd as well as linux

Tue Oct 26 15:24:21 2004  George Lebl <jirka@5z.com>

	* daemon/gdm.[ch]: Add a global cookie in <ServAuthDir>/.cookie which
	  can be used to authenticate if no display is available.

	* daemon/gdm.[ch]: add a SOP command to launch a new flexiserver
	  by "echo FLEXI_XSERVER >/var/lib/gdm/.gdmfifo"  No error detection
	  is possible then ofcourse.  Patch from Tuukka Hastrup
	  <Tuukka.Hastrup@iki.fi> with some fixup to make it actually work
	  right.

Tue Oct 26 14:50:34 2004  George Lebl <jirka@5z.com>

	* daemon/gdm.c, daemon/server.c: Make autologin work on a second
	  display if the first display started is an unhandled or a chooser
	  server.

2004-10-21  Brian Cameron  <brian.cameron@sun.com>

	* acconfig.h, configure.in, config/gdm.conf.in: Set up Xnest
	  so it works properly on Solaris.

2004-10-14  Brian Cameron  <brian.cameron@sun.com>

	* config/gdm.conf.in: Minor change to wording in comments.

2004-10-05  Kjartan Maraas  <kmaraas@gnome.org>

	* config/locale.alias: Prefer nb_NO locale.

Fri Oct 01 12:07:18 2004  Ray Strode  <rstrode@redhat.com>

	* gui/greeter/greeter_action_language.c (selection_changed):
	Ensure that selection iterator is valid before using it.

Thu Sep 30 20:49:26 2004  George Lebl <jirka@5z.com>

	* daemon/slave.c: set GDM_XSERVER_LOCATION with the x server type

Thu Sep 30 10:50:00 2004  Brian Cameron  <brian.cameron@sun.com>

	* daemon/verify-pam.c: Now declare GdmUserId and GdmGroupId as
	  extern to avoid warnigns.

Wed Sep 29 17:15:00 2004  Brian Cameron  <brian.cameron@sun.com>

	* daemon/gdm.c, daemon/verify-pam.c: Cleaned up code and moved