@@ -14,6 +14,7 @@
 #
 #		- George
 
+Afrikaans			af_ZA.UTF-8,af_ZA
 Albanian			sq_AL.UTF-8,sq_AL
 Amharic			am_ET.UTF-8,am_ET
 Arabic(Egypt)		ar_EG.UTF-8,ar_EG
@@ -38,6 +39,7 @@ English(Australia)	en_AU.UTF-8,en_AU
 English(UK)		en_GB.UTF-8,en_GB
 English(Canada)		en_CA.UTF-8,en_CA
 English(Ireland)	en_IE.UTF-8,en_IE
+English(SouthAfrica)	en_ZA.UTF-8,en_ZA
 Estonian		et_EE.UTF-8,et_EE
 Finnish			fi_FI.UTF-8,fi_FI
 French			fr_FR.UTF-8,fr_FR
@@ -67,6 +69,7 @@ Malayalam			ml_IN.UTF-8,ml_IN
 Malay			ms_MY.UTF-8,ms_MY
 Marathi			mr_IN.UTF-8,mr_IN
 Mongolian		mn_MN.UTF-8,mn_MN
+NorthernSotho	nso_ZA.UTF-8,nso_ZA
 Norwegian(bokmal)	nb_NO.UTF-8,nb_NO,no_NO.UTF-8,no_NO
 Norwegian(nynorsk)	nn_NO.UTF-8,nn_NO
 Oriya			or_IN.UTF-8,or_IN
