@@ -1,3 +1,8 @@
+2004-11-30  Dwayne Bailey  <dwayne@translate.org.za>
+
+	* gui/gdmlanguages.c, config/locale.alias: add Afrikaans, Northern Sotho
+	  and South African English
+
 2004-11-27  Dwayne Bailey  <dwayne@translate.org.za>
 
 	* configure.in: Added "nso" to ALL_LINGUAS.
